# QtPianoRoll

./: .gitignore  CMakeLists.txt  Defines.h  GNoteObject.cpp  GNoteObject.h  GPianoRollScene.cpp  GPianoRollScene.h  GPianoRollView.cpp  GPianoRollView.h  README.md  SongModel.cpp  SongModel.h  main.cpp
